# Mindris-AI

./: .gitignore  main.py  pyproject.toml
docs/: roadmap.md
docs/adr/: 001-core-architecture.md  002-paradigme-de-programmation-hybride.md  003-workspace-restructuring-best-practices.md
services/api-gateway/: __init__.py  pyproject.toml
services/intelligence/: __init__.py  pyproject.toml
services/renderer/: README.md  package.json
services/scraper/: core.py  pyproject.toml
services/scraper/src/: core.py
