[project]
name = "mindris-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai>=1.14.3",
    "fastapi>=0.136.1",
    "langgraph>=1.1.10",
    "pydantic>=2.11.10",
    "pydantic-settings>=2.10.1",
    "ruff>=0.15.12",
    "uvicorn>=0.46.0",
]

[tool.uv.workspace]
members = [
    "services/api-gateway",
    "services/intelligence",
    "services/scraper",
]
