[project]
name = "mindris-ai"
version = "0.1.0"
description = "Mindris AI Monorepo"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.3.4",
]

[tool.uv.workspace]
members = [
    "services/api-gateway",
    "services/intelligence",
    "services/scraper",
    "packages/database",
]

[tool.ruff]
line-length = 88
target-version = "py312"
# Basic ruff configuration
# select = ["E", "F", "I", "N", "W", "B", "C4", "UP"]
