[project]
name = "api-gateway"
version = "0.1.0"
description = "Mindris AI API Gateway service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "pydantic-settings>=2.10.1",
    "uvicorn>=0.46.0",
    "database",
]

[tool.uv.sources]
database = { workspace = true }

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["api_gateway"]
package-dir = {"api_gateway" = "."}
