[project]
name = "scraper"
version = "0.1.0"
description = "Mindris AI Scraper service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.58.0",
    "playwright-stealth>=2.0.3",
    "database",
]

[tool.uv.sources]
database = { workspace = true }

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["scraper"]
package-dir = {"scraper" = "."}
